--- a/sites/all/themes/openscholar/cp_theme/css/cp-theme.css
+++ b/sites/all/themes/openscholar/cp_theme/css/cp-theme.css
@@ -45,6 +45,27 @@ body.openscholar-admin,#page {
   }
 
 
+/* IMAGES */
+
+img {
+  border:none;
+  }
+
+.img-flL {
+  float: left;
+  margin: 0 1em .9em 0;
+  }
+
+.img-flR {
+  float: right;
+  margin: 0 0 .9em 1em;
+  }
+
+.img-center {
+  margin: 1.5em auto;
+  text-align: center;
+  }
+
 /* Removes Rubik icons */
 
 #page .node-type-list li,
