--- a/sites/all/themes/openscholar/scholar_base/css/biblio.css
+++ b/sites/all/themes/openscholar/scholar_base/css/biblio.css
@@ -39,10 +39,10 @@ dl.bibliomultiselect .form-item {
 #biblio-authors table, #biblio-tertiary-authors  table  {
   width: 100%;
 }
-#biblio-authors  .form-text {
+#biblio-authors .form-text {
   width: 95%;
 }
-#biblio-authors  td.biblio-contributor,
+#biblio-authors td.biblio-contributor,
 #biblio-secondary-authors td.biblio-contributor,
 #biblio-tertiary-authors td.biblio-contributor,
 #biblio-subsidiary-authors  td.biblio-contributor,
@@ -245,7 +245,6 @@ body.node-type-biblio .node-type-biblio .field-field-biblio-image {
   border-spacing: 0;
   }
 
-
 .node-teaser.node-type-biblio .itu-attachment-list td {
   padding: 0 .4em;
   }
@@ -292,6 +291,6 @@ body.node-type-biblio .biblio-export {
   padding-top:0;
   }
 
-body.node-type-biblio #biblio-node h3 {
-  margin: 0
+#biblio-node span.biblio-authors {
+  font-weight: bold;
   }
