--- a/sites/all/themes/openscholar/scholar_bunchy/cp-layout-map.css
+++ b/sites/all/themes/openscholar/scholar_bunchy/cp-layout-map.css
@@ -6,11 +6,15 @@
   left: 593px;
 }
 
-#scholarlayout-container #scholarlayout-left {
+#scholarlayout-container #scholarlayout-main {
   left: 42px;
 }
 
-#scholarlayout-container #scholarlayout-header-main{
+#scholarlayout-container #scholarlayout-left {
+  left: 297px;
+}
+
+#scholarlayout-container #scholarlayout-header-main {
   left: 297px;
 }
 
