--- a/sites/all/themes/openscholar/scholar_aglet/scholar-aglet.css
+++ b/sites/all/themes/openscholar/scholar_aglet/scholar-aglet.css
@@ -41,9 +41,7 @@ p.copy {
   margin-top: 0;
   }
 
-
 /* LAYOUT ELEMENTS */
-
 
 #container {
   background: url(images/bg.png) repeat-y 0 0 transparent;
@@ -84,7 +82,6 @@ p.copy {
 #header,
 #footer,
 #content-wrapper {
-  width: 1000px;
   padding-right: 48px;
   padding-left: 48px;
   }
@@ -147,23 +144,25 @@ body.no-sidebars #content-wrapper {
   padding-left: 85px;
   }
 
+body.no-sidebars #content-wrapper {
+  width:auto;
+  padding-right: 85px;
+  }
 
 /* SIDEBAR ELEMENTS */
 
 #sidebar-second {
   width:254px;
-  padding:0;
+  padding:30px 0 0 0;
   margin:0;
-  padding:0;
   background: #d9e3e5;
   }
 
 #sidebar-first {
   width: 221px;
-  padding: 0;
+  padding:30px 0 0 0;
   right: 173px;
   margin: 0;
-  padding:0;
   background:#e0ece8;
   }
 
@@ -174,15 +173,6 @@ body.no-sidebars #content-wrapper {
   color: #000;
   text-decoration: underline;
   }
-
-#content-wrapper {
-  overflow: hidden;
-}
-
-#content-wrapper .sidebar {
-  padding-bottom: 20010px;
-  margin-bottom: -20000px;
-}
 
 #sidebar-first .block,
 #sidebar-second .block,
@@ -313,7 +303,7 @@ body.no-sidebars #content-wrapper {
   line-height: 1.3em;
   }
 
-#block-vsite_menus-1 li a ,
+#block-vsite_menus-1 li a,
 #block-vsite_menus-1 li a:visited{
   color: #000;
   font-size: 12px;
@@ -359,7 +349,6 @@ body.no-sidebars #content-wrapper {
   display:block;
   }
 
-
 /* SEARCH */
 
 #header .search-form .container-inline {
@@ -378,14 +367,18 @@ body.no-sidebars #content-wrapper {
 #header .search-form .container-inline .form-item .form-text {
   border: none;
   height: 21px;
+  background:transparent;
   }
 
 #header #edit-keys-wrapper {
   width: 190px;
   }
 
-#header .search-form input.form-submit {
+#header .search-form input.form-submit,
+#header #search-block-form #edit-submit,
+#header #search-form #edit-submit{
   margin: 0;
   width:27px;
   height: 28px;
+  background: transparent;
   }
