--- a/sites/all/themes/openscholar/scholar_base/css/modal.css
+++ b/sites/all/themes/openscholar/scholar_base/css/modal.css
@@ -9,7 +9,8 @@
 #modalBackdrop {
   background: blue;
   }
-div.ctools-modal-content {
+div.ctools-modal-content,
+#wysiwyg_imagefield-dialog {
   color: #000;
   padding: 20px 0 0 25px;
   margin: 0;
