--- a/sites/all/themes/openscholar/scholar_base/css/tables.css
+++ b/sites/all/themes/openscholar/scholar_base/css/tables.css
@@ -1,7 +1,6 @@
 table {
-  border-collapse: collapse;
-  text-align:left;
   width: 100%;
+  margin-bottom: 1em;
   }
 
 th, td {
@@ -29,15 +28,9 @@ th.checkbox, td.checkbox {
   }
 
 tr.even, tr.odd {
-  background-color: #fff;
+  background-color: transparent;
   border-bottom: 1px solid #d9d9d9;
   }
-
-/*
-tr.odd {
-  background-color: #f3f3f3;
-  }
-*/
 
 td {
   color: #666;
@@ -58,6 +51,18 @@ tr.selected td, tr.selected td a {
 
 #content table {
   clear: both;
+  }
+
+.draggable a.tabledrag-handle {
+  height:1.1em;
+  margin:-.1em 0 0 0;
+  padding:0 .5em 0 0;
+  }
+
+table.itu-attachment-list {
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
   }
 
 table.itu-attachment-list td.file,
