--- a/sites/all/themes/openscholar/scholar_base/css/tabs.css
+++ b/sites/all/themes/openscholar/scholar_base/css/tabs.css
@@ -2,7 +2,7 @@
 .tabs {
   background-color: transparent;
   float: none;
-  margin: 0 0 1.5em 0;
+  margin: 0 0 10px 0;
   padding: 0;
 }
 
@@ -102,11 +102,7 @@
 /*****************************/
 
 .tabs ul.primary {
-  border-bottom: 1px solid #000;
-}
-
-.tabs ul.primary {
-  border-bottom: 1px solid #c3c3c3;
+  border-bottom: none;
 }
 
 .tabs ul.primary li a:link,
@@ -137,7 +133,7 @@
 
 /* Secondary */
 .tabs ul.secondary {
-  border-bottom: 1px solid #c3c3c3;
+  border-bottom: none;
 }
 
 .tabs ul.secondary li a:link,
