--- a/sites/all/themes/openscholar/cp_theme/css/typography.css
+++ b/sites/all/themes/openscholar/cp_theme/css/typography.css
@@ -12,7 +12,7 @@ select  {
   line-height: 44px;
   min-height: 44px;
   text-shadow: none;
-  padding-bottom: 0;
+  padding: 0;
   }
 
 #page-title .page-title span.icon {
