form alter on biblio import, other minor changes

--- a/sites/all/themes/openscholar/scholar_base/css/system.css
+++ b/sites/all/themes/openscholar/scholar_base/css/system.css
@@ -223,7 +223,7 @@ html.js .no-js {
   background: #fff url(../images/progress.gif);
   border: 1px solid #00375a;
   height: 1.5em;
-  margin: 0 0.2em;
+  margin: 0;
 	}
 
 .progress .filled {
