changes to twitter feed for quinn theme

--- a/sites/all/modules/openscholar_features/scholar_reader/theme/scholar-reader.css
+++ b/sites/all/modules/openscholar_features/scholar_reader/theme/scholar-reader.css
@@ -25,3 +25,12 @@
   float:left;
   margin: 0 .7em .1em 0;
   }
+
+.sidebar #block-scholar_reader-my_twitter_feed a {
+  display:inline !important;
+  }
+
+.sidebar #block-scholar_reader-my_twitter_feed li {
+  padding-top: 10px;
+  border-top: 1px dashed #ccc;
+  }
