--- a/sites/all/themes/openscholar/scholar_quinn/scholar-quinn.css
+++ b/sites/all/themes/openscholar/scholar_quinn/scholar-quinn.css
@@ -188,13 +188,15 @@ body.sidebar-first #content-wrapper, body.header-left-main #header-wrapper {
 
 #sidebar-first a,
 #sidebar-first h3,
-#sidebar-first #block-vsite_widgets-1 {
+#sidebar-first #block-vsite_widgets-1,
+#sidebar-first #block-scholar_reader-my_twitter_feed {
     padding-right: 12px;
     }
 
 #sidebar-second a,
 #sidebar-second h3,
-#sidebar-second #block-vsite_widgets-1 {
+#sidebar-second #block-vsite_widgets-1,
+#sidebar-second #block-scholar_reader-my_twitter_feed{
   padding-left:12px;
   }
 
